--- a/ex3.html
+++ b/ex3.html
@@ -12,7 +12,7 @@
             <label for="nom">nom*</label>
             <input type="text" id="nom" name="nom" required>
             <br>
-            <label for="portable">portable</label>
+            <label for="portable">portale</label>
             <input type="tel" id="telephone" name="telephone" placeholder="06xxxxxxxx" pattern="06[0-9]{8}">
             <br>
             <label for="email">email</label>
